phase2_Dev/src/objects/FormComponent__c.object
<CustomObject>
    <fields>
        <fullName>AutorabitExtId__c</fullName>
        <description>External Id created by AutoRABIT</description>
        <externalId>true</externalId>
        <label>AutorabitExtId__c</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ComponentType__c</fullName>
        <formula>Component__r.DeveloperName__c</formula>
        <label>ComponentType</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Component__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Component</label>
        <referenceTo>Component__c</referenceTo>
        <relationshipLabel>Form Components</relationshipLabel>
        <relationshipName>FormComponents</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FormVersion__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Form Version</label>
        <referenceTo>FormVersion__c</referenceTo>
        <relationshipLabel>Form Components</relationshipLabel>
        <relationshipName>FormComponents</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Order__c</fullName>
        <description>The order that this component should be rendered as related to its siblings.</description>
        <label>Order</label>
        <precision>2</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ParentFormComponentUUID__c</fullName>
        <formula>ParentFormComponent__r.UUID__c</formula>
        <label>Parent Form Component UUID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ParentFormComponent__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Parent Form Component</label>
        <referenceTo>FormComponent__c</referenceTo>
        <relationshipLabel>Child Form Components</relationshipLabel>
        <relationshipName>ChildFormComponents</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <formula>TEXT( Component__r.Type__c )</formula>
        <label>Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UUID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>A UUID for the Form Component. It should not be changed once set.</description>
        <label>UUID</label>
        <length>36</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Form Component</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Component__c</columns>
        <columns>ParentFormComponent__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>FC-{0}</displayFormat>
        <label>Form Component Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Form Components</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>